# adventofcode2020

./: .editorconfig  README.md  go.mod  go.sum  pyproject.toml
advent/: __init__.py  execute.py  setup.py  test.py  test_case.py
day01/: main.go  puzzle.go
day02/: main.go  main_test.go  puzzle.go
day03/: main.go  tests.go
day04/: main.go  main_test.go  tests.go
day05/: main.go  main_test.go  tests.go
day06/: main.go  tests.go
day07/: bag_rules.py  conftest.py  main.py  test_main.py
day07_go/: main.go  main_test.go  tests.go
day08/: handheld_vm.py  main.py
day09/: main.py
day10/: main.py
day11/: main.py
day12/: main.py
day13/: main.py
day14/: main.py  test_main.py
day15/: main.py  test_main.py  vm.py
pkg/: parse.go
pkg/execute/: execute.go
template/: main.go  puzzle.go
template_python/: main.py  test_main.py
