[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["James Roeder <jmaroeder@gmail.com>"]
packages = [
  { include = "advent" },
  { include = "day07" },
  { include = "day08" },
  { include = "day09" },
  { include = "day1*" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = {extras = ["toml"], version = "^6.2.1"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--exitfirst"
